[package]
name = "actix-cch23"
version = "0.8.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.3.1"
derive_more = "0.99.17"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.26.0"
serde_json = "1.0.120"
base64 = "0.22.1"
reqwest = { version = "0.12.5", features = ["json"] }
